; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/line6/extr_variax.c_variax_activate_timeout.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/line6/extr_variax.c_variax_activate_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_line6_variax = type { i32*, i32 }

@VARIAX_OFFSET_ACTIVATE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @variax_activate_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @variax_activate_timeout(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.usb_line6_variax*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = inttoptr i64 %4 to %struct.usb_line6_variax*
  store %struct.usb_line6_variax* %5, %struct.usb_line6_variax** %3, align 8
  %6 = load %struct.usb_line6_variax*, %struct.usb_line6_variax** %3, align 8
  %7 = getelementptr inbounds %struct.usb_line6_variax, %struct.usb_line6_variax* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = load i64, i64* @VARIAX_OFFSET_ACTIVATE, align 8
  %10 = getelementptr inbounds i32, i32* %8, i64 %9
  store i32 1, i32* %10, align 4
  %11 = load %struct.usb_line6_variax*, %struct.usb_line6_variax** %3, align 8
  %12 = getelementptr inbounds %struct.usb_line6_variax, %struct.usb_line6_variax* %11, i32 0, i32 1
  %13 = load %struct.usb_line6_variax*, %struct.usb_line6_variax** %3, align 8
  %14 = getelementptr inbounds %struct.usb_line6_variax, %struct.usb_line6_variax* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = call i32 @line6_send_raw_message_async(i32* %12, i32* %15, i32 4)
  ret void
}

declare dso_local i32 @line6_send_raw_message_async(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
